fix menu z-index and ul rendering in react-markdown

--- a/components/layout/Nav.module.scss
+++ b/components/layout/Nav.module.scss
@@ -6,8 +6,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 100;
   width: 100%;
-  z-index: 2;
   padding: 1.2rem 5% 1.2rem;
   background-color: $primary-color-blue;
   @include media-query-lg {
