--- a/pages/idees/[slug].module.scss
+++ b/pages/idees/[slug].module.scss
@@ -83,6 +83,16 @@
         color: $color-green-1;
       }
     }
+
+    ul {
+      font-size: 1rem;
+      line-height: 1.2;
+      text-align: justify;
+      color: $primary-color-blue;
+      @include media-query-sm {
+        font-size: 1.2rem;
+      }
+    }
   }
 
   .greenBackground {
